@@ -41,7 +41,7 @@ them.</p>
 % $m->comp(".t_bottom");
 
 % $m->comp(".t_top", caption => "License");
-<p>Copyright &copy; 2001-2002 About.com. Changes Copyright &copy; 2001-2004
+<p>Copyright &copy; 2001-2002 About.com. Changes Copyright &copy; 2001-2006
   Kineticode, Inc. and others.</p>
 
 <p>Redistribution and use in source and binary forms, with or without
