@@ -66,4 +66,5 @@
   <li>Wayne Slavin</li>
   <li>Derek Poon</li>
   <li>Ryan O'Toole</li>
+  <li>Tom Kjeldsen</li>
 </ul>
